Add delete todo controller method